[gd_scene load_steps=8 format=1]

[ext_resource path="res://scenes/claw/claw.gd" type="Script" id=1]
[ext_resource path="res://sprites/claws/claw.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 12, 24.9197 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 9.99976, 15 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 32, 5 )

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 1, 1 ]
}

[node name="claw" type="KinematicBody2D"]

transform/pos = Vector2( 650, 83.3334 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 0.976469, -0.165993, -4.00012 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
states = 0
ACCELERATION = 50.0
speed_x = 100.0
speed_y = 0.0
MAX_SPEED = 100.0
STOP = false
anim_path = NodePath("animplayer")
trigger_path = null

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
vframes = 2

[node name="limit" type="Area2D" parent="."]

transform/pos = Vector2( 0, -3 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.000244141, -39.3334 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="collision" type="CollisionShape2D" parent="limit"]

transform/pos = Vector2( 0.000244141, -39.3334 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="boxclaw" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.000244141, 12.6666 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="collision" type="CollisionShape2D" parent="boxclaw"]

transform/pos = Vector2( 0.000244141, 12.6666 )
shape = SubResource( 3 )
trigger = true
_update_shape_index = 0

[node name="animplayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/abierto = SubResource( 4 )
anims/cerrado = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="collision" type="CollisionShape2D" parent="."]

visibility/visible = false
transform/pos = Vector2( -0.165993, -4.00012 )
transform/scale = Vector2( 1, 0.976469 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[connection signal="area_enter" from="limit" to="." method="_on_limit_area_enter"]

[connection signal="area_exit" from="limit" to="." method="_on_limit_area_exit"]

[connection signal="body_enter" from="limit" to="." method="_on_limit_body_enter"]

[connection signal="area_enter" from="boxclaw" to="." method="_on_boxclaw_area_enter"]

[connection signal="body_enter" from="boxclaw" to="." method="_on_boxclaw_body_enter"]

[connection signal="body_exit" from="boxclaw" to="." method="_on_boxclaw_body_exit"]


